--- a/src/Terminal.css
+++ b/src/Terminal.css
@@ -3,13 +3,45 @@
 html{
     background-color:#333;
     padding: 1rem;
-    height: 100vh;
+    height: 100%;
     box-sizing: border-box;
 }
 
+body{
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.terminal{
+  white-space: pre-line;
+  font-family: "VT323", monospace;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.5rem;
+  color: white;
+
+
+  overflow-y: auto;
+  height: 100vh;
+  scroll-behavior: smooth;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 1rem;
+
+} 
+/* .terminal {
+  display: flex;
+  flex-direction: column;
+  height: 100vh; 
+  padding: 1rem;
+  overflow: hidden;  
+  box-sizing: border-box;
+} */
 input{
     background-Color: #333;
-    color: hsl(123, 93%, 49%);
+    color: hsl(42, 93%, 49%);
     border: none;
     outline: none;
     flex: 1;
@@ -17,16 +49,9 @@ input{
     font-Family: monospace;
     font-Size: 16px;
     margin-Left: 5px;
+    box-sizing: border-box;
 }
 
-.terminal{
-    white-space: pre-line;
-    font-family: "VT323", monospace;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 1.4rem;
-    color: white;
-}
 
 .terminal input{
     white-space: pre-line;
@@ -34,11 +59,20 @@ input{
     font-weight: 400;
     font-style: normal;
     font-size: 1.2rem;
+    padding-bottom: 2.0rem;
 }
 
-.terminal .output{
-    color: pink;
+.output {
+  flex-grow: 1; 
+  padding: 10px;
+  color: pink;
+  white-space: pre-wrap;
+}
 
+.terminal-msg{
+  overflow-y:auto;
+
+  padding: 1rem;
 }
 
 h1 {
@@ -46,12 +80,15 @@ h1 {
     font-weight: 400;
     font-style: normal;
     font-size: 3rem;
+    text-align: center;
+    color: #66d9ef;  
+    margin: 20px 0;
+    flex-grow: 0;
   }
   
-  .about{
-    color: green;
-  }
+  
+  
   .command-name {
-    color: #4CAF50; /* Green color */
+    color: #d29512; 
     font-weight: bold;
   }
